Fix some problems spotted by findbugs.
git-svn-id: https://jgrapht.svn.sourceforge.net/svnroot/jgrapht/trunk@588 4a7320f3-3611-0410-a4d0-ef7ff04b8906